src/objects/Ter_Novedades__c.object
<CustomObject>
    <description>Este objeto contiene las novedades de las estaciones de servicio consistentes en los combustibles que provee, también las novedades de las competencias de cada estación ubicadas por georeferencia.</description>
    <fields>
        <fullName>Ter_Codigo_Unico__c</fullName>
        <description>Este campo contiene el código único de la estación de servicio.</description>
        <formula>Ter_Nombre_EDS__r.Ter_Codigo_unico__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codigo Unico</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Nombre_EDS__c</fullName>
        <description>Este campo corresponde al nombre de la estación de servicio.</description>
        <label>Nombre EDS</label>
        <referenceTo>Ter_Estacion_de_Servicio__c</referenceTo>
        <relationshipLabel>Novedades</relationshipLabel>
        <relationshipName>Novedades</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ter_PVP_ACPM__c</fullName>
        <description>Este campo contiene  el precio del combustible ACPM de la estación de servicio.</description>
        <label>PVP ACPM</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ter_PVP_Corriente__c</fullName>
        <description>Este campo contiene el precio del combustible corriente de la estación de servicio.</description>
        <label>PVP Corriente</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ter_PVP_Extra__c</fullName>
        <description>Este campo contiene el precio del combustible extra de la estación de servicio.</description>
        <label>PVP Extra</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ter_PVP_GNV__c</fullName>
        <description>Este campo contiene el precio del combustible GNV de la estación de servicio.</description>
        <label>PVP GNV</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Novedad</label>
    <nameField>
        <displayFormat>NOV{000000}-{YYYY}-{MM}-{DD}</displayFormat>
        <label>Código de novedad</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Novedades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>